# -Leadgen

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: CTA.tsx  CaseStudy.tsx  DemoOverlay.tsx  Footer.tsx  Header.tsx  Hero.tsx  Pricing.tsx  Product.tsx  ROI.tsx  ScrollReveal.tsx
frontend/src/motion/: config.ts
landing/: dashboard.html  index.html  onboarding.html  robots.txt  sitemap.xml
migrations/: env.py
migrations/versions/: bbfcd6c97ab2_initial.py
scripts/: backup.sh  start-kimi-webbridge.sh
src/: __init__.py  cli.py  config.py  health.py  stream.py  web.py
src/browser/: kimi.py
src/core/: orchestrator.py  outreach.py  scraper.py
src/db/: __init__.py
src/tasks/: __init__.py
tests/: conftest.py  test_db.py  test_routes.py
