[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "leadgen-agent"
version = "1.0.0"
description = "Autonomous B2B lead generation and outreach agent"
dependencies = [
    "stripe>=9.1.0",
    "sendgrid>=6.11.0",
    "python-dateutil>=2.9.0",
    "sqlalchemy>=2.0.31",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "structlog>=24.2.0",
    "click>=8.1.7",
    "websockets>=12.0",
    "sentry-sdk>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
landing = ["*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
